Fix alignment of the "Mark all read" button
Bug: T169019

--- a/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -30,7 +30,7 @@
 				}
 
 				.mw-echo-ui-notificationsWidget-markAllReadButton {
-					margin: 1.25em 1em 0 0;
+					margin-right: 1em;
 				}
 			}
 
